[package]
name = "nx"
version = "0.0.1"
edition = "2021"

[dependencies]
# error
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
# parallelization
rayon = "1.10.0"
# language extension
arrayvec = "0.7.6"
itertools = "0.14.0"
enum-as-inner = "0.6.1"
# utilities
pbr = "1.1.1"
clap = "4.5.35"
serde = "1.0.219"

[dev-dependencies]
# performance
criterion = "0.5.1"
